remove files for smaller image

--- a/2.4.2/Dockerfile
+++ b/2.4.2/Dockerfile
@@ -37,6 +37,7 @@ ENV CASSANDRA_PIDFILE /opt/elassandra-2.4.2/cassandra.pid
 RUN wget https://github.com/strapdata/elassandra/releases/download/v2.4.2-10/elassandra-2.4.2.tar.gz -O /elassandra-$ELASSANDRA_VERSION.tar.gz
 RUN cd /opt \
   && tar -xzf "/elassandra-$ELASSANDRA_VERSION.tar.gz" \
+  && rm -v "/elassandra-$ELASSANDRA_VERSION.tar.gz" \
   && chown -R cassandra:cassandra "$CASSANDRA_HOME" \
   && chmod -R o-rwx "$CASSANDRA_HOME"
 
