fix last commit error (a path is missing while changing ownership)

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -47,7 +47,7 @@ RUN mkdir -p /var/lib/cassandra /var/log/cassandra \
 	&& rm -r "$CASSANDRA_HOME"/data "$CASSANDRA_HOME"/logs \
   && ln -s /var/lib/cassandra "$CASSANDRA_HOME"/data \
   && ln -s /var/log/cassandra "$CASSANDRA_HOME"/logs \
-  && chown -R cassandra:cassandra /var/lib/cassandra "$CASSANDRA_HOME"/data "$CASSANDRA_HOME"/logs \
+  && chown -R cassandra:cassandra /var/lib/cassandra /var/log/cassandra "$CASSANDRA_HOME"/data "$CASSANDRA_HOME"/logs \
   && chmod 750 /var/lib/cassandra /var/log/cassandra
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
