--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ before_install:
  - sudo pip install jinja2 jinja2-cli
  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
-#env:
-# - PUBLISH="false"
-# - REPO="elassandra"
+env:
+ - PUBLISH="true"
+ - REPO="elassandra5-rc"
 
 script:
     - bash build.sh
