fixup service variables

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,20 +62,21 @@ build:
 publish:
   stage: publish
   image: docker-dev-snapshot-local.logistics.corp/strapdata/elassandra_builder:latest
-  services:
-   - name: docker:dind
-     alias: docker
-     command: ["--mtu=1440","--insecure-registry=docker-dev-snapshot-local.logistics.corp","--insecure-registry=docker-dev-local.logistics.corp"]
   variables:
-    http_proxy: http://iahlproxy.logistics.corp:3128
-    https_proxy: http://iahlproxy.logistics.corp:3128
-    no_proxy: ".logistics.corp,dockerdaemon"
     DOCKER_TLS_VERIFY: 1
     DOCKER_TLS_CERTDIR: "/certs"
     DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
     DOCKER_HOST: "tcp://docker:2376"
     DOCKER_DRIVER: overlay2
     DOCKER_BUILD_OPTS: --network host --build-arg no_proxy=${no_proxy} --build-arg http_proxy=${http_proxy} --build-arg https_proxy=${https_proxy} --rm
+  services:
+   - name: docker:dind
+     alias: docker
+     command: ["--mtu=1440","--insecure-registry=docker-dev-snapshot-local.logistics.corp","--insecure-registry=docker-dev-local.logistics.corp"]
+     variables:
+       http_proxy: http://iahlproxy.logistics.corp:3128
+       https_proxy: http://iahlproxy.logistics.corp:3128
+       no_proxy: "localhost,docker,.logistics.corp"
   before_script:
     - mkdir -p $HOME/.docker/
     - cp logistics-corp.pem $HOME/.docker/ca.pem
