--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 variables:
   DOCKER_REGISTRY: docker-dev-snapshot-local.logistics.corp
-  ELASSANDRA_VERSION: 6.2.3.41
   GIT_SUBMODULE_STRATEGY: recursive
 
 stages:
@@ -65,6 +64,8 @@ publish:
   needs:
   - job: build
     artifacts: true
+  rules:
+    - if: $CI_COMMIT_TAG
   image: docker-dev-snapshot-local.logistics.corp/strapdata/elassandra_builder:latest
   variables:
     DOCKER_TLS_VERIFY: 1
@@ -88,6 +89,6 @@ publish:
   script:
     - ls -lrt elassandra/distribution/deb/build/distributions
     - docker login -u $DOCKER_USERNAME -p "$DOCKER_PASSWORD" docker-dev-snapshot-local.logistics.corp
-    - BASE_IMAGE_TAG=${ELASSANDRA_VERSION} PACKAGE_LOCATION=elassandra/distribution/deb/build/distributions/elassandra-${ELASSANDRA_VERSION}.deb DOCKER_PUBLISH=true ./build.sh
+    - BASE_IMAGE_TAG=${CI_COMMIT_TAG:1} PACKAGE_LOCATION=elassandra/distribution/deb/build/distributions/elassandra-${CI_COMMIT_TAG:1}.deb DOCKER_PUBLISH=true ./build.sh
   tags:
     - k8s-iah-east
