--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
 variables:
-  DOCKER_REGISTRY: docker-dev-snapshot-local.logistics.corp
+  DOCKER_REGISTRY: docker-dev-local.logistics.corp
+  CASSANDRA_VERSION: 4.1.4
+  DOCKERFILE: Dockerfile.c4
+  BASE_IMAGE: openjdk:11.0.16-slim-bullseye
+  DOCKER_DEFAULT_PLATFORM: linux/amd64
 
 stages:
  - publish
