--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
 
 stages:
  - publish
+ - trigger
 
 # Publish the Elassandra Enterprise docker image into the artifactory.
 publish:
@@ -41,3 +42,12 @@ publish:
     - PACKAGE_LOCATION=${CI_PROJECT_DIR}/elassandra-${CI_COMMIT_TAG:1}.tar.gz DOCKER_PUBLISH=true ./build.sh
   tags:
     - k8s-eudc-east
+
+trigger_job:
+    stage: trigger
+    rules:
+      - if: $CI_COMMIT_TAG
+    trigger:
+      project:  strapdata/docker-elassandra-enterprise
+      branch: $CI_COMMIT_TAG
+
